--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     'Assets/Base/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
-                'attribution': 'Map tiles designed by Elizabeth Luna</a>'
+                'attribution': 'Map tiles designed by Heyao Yang</a>'
             });
 
             map.addSource('Mexican-flag-colors-tiles', {
@@ -99,7 +99,7 @@
                     'Assets/Mexican-flag-colors/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
-                'attribution': 'Map tiles designed by Elizabeth Luna</a>'
+                'attribution': 'Map tiles designed by Heyao Yang</a>'
             });
 
             map.addSource('transit2-tiles', {
@@ -108,7 +108,7 @@
                     'Assets/transit2/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
-                'attribution': 'Map tiles designed by Elizabeth Luna</a>'
+                'attribution': 'Map tiles designed by Heyao Yang</a>'
 
             });
 
@@ -118,7 +118,7 @@
                     'Assets/Transit+base/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
-                'attribution': 'Map tiles designed by Elizabeth Luna</a>'
+                'attribution': 'Map tiles designed by Heyao Yang</a>'
             });
 
             map.addLayer({
